--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import-normalize;
+/* @import-normalize; */
 
 body {
   margin: 0;
@@ -20,4 +20,5 @@ ul {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
